mobile view alignment fixture

--- a/views/design/css/style.css
+++ b/views/design/css/style.css
@@ -5,9 +5,6 @@ body  {
   width: 100%;
 }
 .page-content {
-  padding-top: 5%;
-  padding-left: 5%;
-  padding-right: 5%;
   padding-bottom: 5%;
 }
 .snippet  {
